<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:enabled="true"
      android:key="@string/pref_category_key_camera"
      android:title="@string/pref_category_title_camera">

    <ListPreference
        android:key="@string/pref_key_rear_camera_preview_size"
        android:persistent="true"
        android:title="@string/pref_title_rear_camera_preview_size"/>

    <ListPreference
        android:key="@string/pref_key_front_camera_preview_size"
        android:persistent="true"
        android:title="@string/pref_title_front_camera_preview_size"/>

    <ListPreference
        android:key="@string/pref_key_camerax_target_resolution"
        android:persistent="true"
        android:title="@string/pref_title_camerax_target_resolution"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_camera_live_viewport"
        android:persistent="true"
        android:summary="@string/pref_summary_camera_live_viewport"
        android:title="@string/pref_title_camera_live_viewport"/>

  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_category_pose_detection">

    <!-- Only one selector: all models (ML Kit + ncnn + builtin ONNX + imported ONNX),
         multi-select. Entries are populated at runtime in
         LivePreviewPreferenceFragment#refreshModelListPreference(). -->
    <MultiSelectListPreference
        android:key="@string/pref_key_ncnn_models"
        android:defaultValue="@array/pref_default_ncnn_models"
        android:persistent="true"
        android:title="@string/pref_title_ncnn_models"
        android:summary="@string/pref_summary_ncnn_models"/>

    <Preference
        android:key="@string/pref_key_import_onnx"
        android:title="@string/pref_title_import_onnx"
        android:summary="@string/pref_summary_import_onnx"/>

    <ListPreference
        android:defaultValue="@string/pref_entry_values_ncnn_cpugpu_cpu"
        android:entries="@array/pref_entries_ncnn_cpugpu"
        android:entryValues="@array/pref_entry_values_ncnn_cpugpu"
        android:key="@string/pref_key_ncnn_cpugpu"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/pref_title_ncnn_cpugpu"/>

  </PreferenceCategory>
</PreferenceScreen>